Hystrix in Recommendaiton
Hystrix Stream: http://localhost:8083/hystrix.stream

--- a/recommendation/src/main/resources/application.properties
+++ b/recommendation/src/main/resources/application.properties
@@ -7,4 +7,8 @@ spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
+management.endpoint.hystrix.stream.enabled=true
+management.endpoints.web.exposure.include=actuator/hystrix.stream
+management.endpoints.web.base-path=/
+
 
