--- a/movies/pom.xml
+++ b/movies/pom.xml
@@ -83,6 +83,10 @@
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.netflix.hystrix</groupId>
+            <artifactId>hystrix-core</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
