--- a/recommendation/src/main/resources/application.properties
+++ b/recommendation/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-
-management.endpoint.hystrix.stream.enabled=true
-management.endpoints.web.exposure.include=actuator/hystrix.stream
-management.endpoints.web.base-path=/
+#
+#management.endpoint.hystrix.stream.enabled=true
+#management.endpoints.web.exposure.include=actuator/hystrix.stream
+#management.endpoints.web.base-path=/
 
 
