--- a/zuul-master/src/main/resources/application.properties
+++ b/zuul-master/src/main/resources/application.properties
@@ -30,5 +30,9 @@ zuul.routes.auth-service.path=/auth/**
 zuul.routes.auth-service.service-id=auth-service
 zuul.routes.auth-service.strip-prefix=false
 
+zuul.routes.auth-users-service.path=/users/**
+zuul.routes.auth-users-service.service-id=auth-service
+zuul.routes.auth-users-service.strip-prefix=false
+
 zuul.routes.auth-service.sensitive-headers=Cookie,Set-Cookie
 ribbon.ReadTimeout=60000
