--- a/zuul-master/src/main/resources/application.properties
+++ b/zuul-master/src/main/resources/application.properties
@@ -2,11 +2,14 @@ server.port=8762
 spring.application.name=zuul-server
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
+spring.mvc.dispatch-options-request=true
+
+
 zuul.ignored-services=*
 
-zuul.routes.employee-service.path=/movie/**
-zuul.routes.catalog-service.service-id=movie-service
-zuul.routes.employee-service.strip-prefix=false
+zuul.routes.movie-service.path=/movie/**
+zuul.routes.movie-service.service-id=movies-service
+zuul.routes.movie-service.strip-prefix=false
 
 zuul.routes.menu-service.path=/order/**
 zuul.routes.menu-service.service-id=order-service
@@ -17,12 +20,12 @@ zuul.routes.order-service.path=/user/**
 zuul.routes.order-service.service-id=order-service
 zuul.routes.order-service.strip-prefix=false
 
-zuul.routes.meal-service.path=/recommendation/**
-zuul.routes.meal-service.service-id=recommendation-service
-zuul.routes.meal-service.strip-prefix=false
+zuul.routes.recommendation-service.path=/recommendation/**
+zuul.routes.recommendation-service.service-id=recommendation-service
+zuul.routes.recommendation-service.strip-prefix=false
 
 
-zuul.routes.reservation-service.path=/wish/**
+zuul.routes.reservation-service.path=/wishlist/**
 zuul.routes.reservation-service.service-id=wishlist-service
 zuul.routes.reservation-service.strip-prefix=false
 
