update + fixes + docker

--- a/auth-service-master/pom.xml
+++ b/auth-service-master/pom.xml
@@ -8,7 +8,7 @@
         <version>2.3.5.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>kz.muminov</groupId>
+    <groupId>kz.alikhan</groupId>
     <artifactId>auth-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>auth-service</name>
