--- a/zuul-master/src/main/resources/application.properties
+++ b/zuul-master/src/main/resources/application.properties
@@ -25,9 +25,9 @@ zuul.routes.recommendation-service.service-id=recommendation-service
 zuul.routes.recommendation-service.strip-prefix=false
 
 
-zuul.routes.reservation-service.path=/wishlist/**
-zuul.routes.reservation-service.service-id=wishlist-service
-zuul.routes.reservation-service.strip-prefix=false
+zuul.routes.wishlist-service.path=/wishlist/**
+zuul.routes.wishlist-service.service-id=wishlist-service
+zuul.routes.wishlist-service.strip-prefix=false
 
 zuul.routes.auth-service.path=/auth/**
 zuul.routes.auth-service.service-id=auth-service
@@ -37,5 +37,10 @@ zuul.routes.auth-users-service.path=/users/**
 zuul.routes.auth-users-service.service-id=auth-service
 zuul.routes.auth-users-service.strip-prefix=false
 
-zuul.routes.auth-service.sensitive-headers=Cookie,Set-Cookie
+zuul.routes.trailer-service.path=/trailer/**
+zuul.routes.trailer-service.service-id=trailer-service
+zuul.routes.trailer-service.strip-prefix=false
+
+zuul.routes.auth-service.sensitive-headers=Set-Cookie,Cookie
+ribbon.connectioTimeout=60000
 ribbon.ReadTimeout=60000
